--- a/web/src/pages/HomePage/css/content.css
+++ b/web/src/pages/HomePage/css/content.css
@@ -141,9 +141,8 @@
 .date {
   border-radius: 10px; 
   border: 2px solid #ef5733;
-  background-color: #ffffff; 
   padding: 8px; 
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1) !important;
+  background-color: #ededed !important;
 }
 
 /* Ẩn viền mặc định của TextField để áp dụng màu viền tùy chỉnh */
@@ -169,3 +168,103 @@
   outline: 8px solid rgba(170, 46, 8, .1);
 }
 
+/* Xóa viền mặc định */
+.select .MuiOutlinedInput-notchedOutline {
+  border-color: transparent !important; 
+}
+
+/* Xóa viền khi hover */
+.select:hover .MuiOutlinedInput-notchedOutline {
+  border-color: transparent !important; 
+  border-radius: 10px !important; 
+}
+
+/* Xóa viền khi focus */
+.select.Mui-focused .MuiOutlinedInput-notchedOutline {
+  border-color: transparent !important;
+  border-radius: 10px !important; 
+}
+
+/* Xóa nền khi hover */
+.select .MuiSelect-select {
+  background-color: transparent !important;
+  border-radius: 10px !important; 
+}
+
+/* Xóa hiệu ứng focus */
+.select .MuiSelect-select:focus {
+  background-color: #ededed !important;
+  outline: none !important;
+  border-radius: 10px !important; 
+
+}
+.select {
+  border-radius: 10px; 
+ /* border: 2px solid #ef5733; */
+  padding: 8px; 
+  background-color: #ededed !important;
+}
+.select .MuiInputBase-input {
+  margin-top: 3px !important ;
+  color: black !important;
+  font-size: 17px !important;
+  font-weight: bold !important;
+}
+
+.select .MuiInputLabel-root {
+  color: #212121 !important;
+  font-size: 17px !important;
+}
+.select-calendar__tile span {
+  display: block !important; 
+  text-align: center !important;
+  background-color: #0d0c02 !important;
+
+}
+
+/*  */
+.select1 .MuiOutlinedInput-notchedOutline {
+  border: 1px solid #e2e2e2 !important; /* Viền mặc định */
+  border-radius: 7px !important;
+}
+
+/* Giữ nguyên viền khi focus */
+.select1 .MuiOutlinedInput-root.Mui-focused .MuiOutlinedInput-notchedOutline {
+  border: 1px solid #e2e2e2  !important; /* Giữ viền mặc định khi click vào */
+  box-shadow: none !important; /* Xóa hiệu ứng đổ bóng */
+}
+
+/* Xóa viền xanh khi hover */
+.select1:hover .MuiOutlinedInput-notchedOutline {
+  border: 1px solid #e2e2e2 !important; /* Không thay đổi viền khi hover */
+}
+
+/* Xóa hiệu ứng focus */
+.select1 .MuiOutlinedInput-root:focus,
+.select1 .MuiSelect-select:focus {
+  outline: none !important; /* Xóa đường viền ngoài */
+  background-color: #ededed !important; /* Nền khi focus */
+}
+
+/* Định dạng chung */
+.select1 {
+ 
+  width: 580px !important;
+  margin: auto !important;
+  margin-bottom: 20px !important;
+}
+
+.select1 .MuiInputBase-input {
+  height: 13px !important;
+  margin-top: 3px !important;
+  color: black !important;
+  font-size: 16px !important;
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2); 
+  
+}
+
+.select1 .MuiInputLabel-root {
+  color: #959595 !important;
+  font-size: 16px !important;
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.1); 
+}
