--- a/web/src/pages/HomePage/css/HomePage.css
+++ b/web/src/pages/HomePage/css/HomePage.css
@@ -431,8 +431,50 @@ body{
     text-transform: none !important;
     color:#000000 !important;
     text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2); 
-    margin-bottom: 16px !important;
+    margin-bottom: 10px !important;
+    font-weight: 500 !important;
    
+   
+  }
+  .button35-5{
+    transition: color 0.1s, text-shadow 0.1s;
+    font-size: 20px !important;
+    font-family: ixi-type, sans-serif !important;
+    text-transform: none !important;
+    color:#c23003 !important;
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2); 
+    margin-bottom: 10px !important;
+    font-weight: bold !important;
+   
+  }
+  .button38{
+    text-transform: none !important;
+    color:#647280 !important;
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2) !important; 
+    font-family: apple-system, BlinkMacSystemFont, Segoe UI, PingFang SC, Hiragino Sans GB, Microsoft YaHei, Helvetica Neue, Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol !important;
+    font-size: 13.5px !important;
+  
+  }
+  .button38-1{
+    text-transform: none !important;
+    color:#484848 !important;
+    font-family: apple-system, BlinkMacSystemFont, Segoe UI, PingFang SC, Hiragino Sans GB, Microsoft YaHei, Helvetica Neue, Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol !important;
+    font-size: 14px !important;
+    font-weight: 500 !important;
+  }
+  .button38-2{
+    text-transform: none !important;
+    color:#858585 !important;
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2) !important; 
+    font-family: apple-system, BlinkMacSystemFont, Segoe UI, PingFang SC, Hiragino Sans GB, Microsoft YaHei, Helvetica Neue, Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol !important;
+    font-size: 12px !important;
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2); 
+  
+  }
+  .button38-3{
+    text-transform: none !important;   
+    font-family: apple-system, BlinkMacSystemFont, Segoe UI, PingFang SC, Hiragino Sans GB, Microsoft YaHei, Helvetica Neue, Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol !important;
+    font-weight: 500 !important;
   }
   .button36{
     
@@ -452,6 +494,31 @@ body{
     margin-bottom: 16px !important;
     text-align: center !important;
    
+  }
+  .button39{
+    transition: color 0.1s, text-shadow 0.1s;
+    font-size: 18.5px !important;
+    font-family: ixi-type, sans-serif !important;
+    text-transform: none !important;
+    color:#b5090c !important;
+   
+    margin-bottom: 10px !important;
+    font-weight: bold !important;
+  }
+  .button49{
+    transition: color 0.1s, text-shadow 0.1s;
+    font-size: 25px !important;
+    font-family: ixi-type, sans-serif !important;
+    background-color: #eb5757 !important;
+    text-transform: none !important;
+    border-radius: 10px;
+    height: 37px !important;
+    width: 90px !important;
+    text-align: center !important;
+    color: white !important;
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2); 
+    margin-top: 4.5px !important;
+    font-weight: bold !important;
   }
   .button{
     transition: color 0.1s, text-shadow 0.1s;
