--- a/web/src/pages/HomePage/css/HomePage.css
+++ b/web/src/pages/HomePage/css/HomePage.css
@@ -455,6 +455,35 @@ body{
     font-size: 13.5px !important;
   
   }
+  .button38-4{
+    text-transform: none !important;
+    color:#647280 !important;
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2) !important; 
+    font-family: apple-system, BlinkMacSystemFont, Segoe UI, PingFang SC, Hiragino Sans GB, Microsoft YaHei, Helvetica Neue, Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol !important;
+    font-size: 15.5px !important;
+    font-weight: 500 !important;
+  
+  }
+  .button38-6{
+    text-transform: none !important;
+    color:#595e63 !important;
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.1) !important; 
+    font-family: apple-system, BlinkMacSystemFont, Segoe UI, PingFang SC, Hiragino Sans GB, Microsoft YaHei, Helvetica Neue, Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol !important;
+    font-size: 24px !important;
+    font-weight: 500 !important;
+    line-height: 21px !important; 
+    margin-bottom: 35px !important;
+    margin-top: 20px !important;
+  
+  }
+  .button38-5{
+    text-transform: none !important;
+    color:#b4b6b8 !important;
+    font-family: apple-system, BlinkMacSystemFont, Segoe UI, PingFang SC, Hiragino Sans GB, Microsoft YaHei, Helvetica Neue, Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol !important;
+    font-size: 15.5px !important;
+    font-weight: 500 !important;
+  
+  }
   .button38-1{
     text-transform: none !important;
     color:#484848 !important;
