--- a/web/src/pages/HomePage/css/HomePage.css
+++ b/web/src/pages/HomePage/css/HomePage.css
@@ -476,6 +476,39 @@ body{
     margin-top: 20px !important;
   
   }
+  .button39-1{
+    text-transform: none !important;
+    color:#573535 !important;
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.1) !important; 
+    font-family: apple-system, BlinkMacSystemFont, Segoe UI, PingFang SC, Hiragino Sans GB, Microsoft YaHei, Helvetica Neue, Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol !important;
+    font-size: 16px !important;
+    font-weight: 500 !important;
+    line-height: 21px !important; 
+    margin-left: 15px !important;
+    margin-right: 15px !important;
+    margin-bottom: 5px !important;
+   
+  }
+  .button39-2{
+    text-transform: none !important;
+    color:#573535 !important;
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.1) !important; 
+    font-family: apple-system, BlinkMacSystemFont, Segoe UI, PingFang SC, Hiragino Sans GB, Microsoft YaHei, Helvetica Neue, Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol !important;
+    font-size: 26px !important;
+    font-weight: bold !important;
+    line-height: 21px !important; 
+    margin-left: 15px !important;
+    margin-bottom: 10px !important;
+  }
+  .button39-3{
+    text-transform: none !important;
+    color:#665a51 !important;
+    font-family: apple-system, BlinkMacSystemFont, Segoe UI, PingFang SC, Hiragino Sans GB, Microsoft YaHei, Helvetica Neue, Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol !important;
+    font-size: 14px !important;
+    line-height: 21px !important; 
+    margin-left: 15px !important;
+    
+  }
   .button38-5{
     text-transform: none !important;
     color:#b4b6b8 !important;
@@ -604,5 +637,6 @@ body{
     font-family: ixi-type, sans-serif !important;
     font-weight: bold;
   }
+  
 
  
