--- a/web/src/pages/HomePage/css/HomePage.css
+++ b/web/src/pages/HomePage/css/HomePage.css
@@ -383,6 +383,14 @@ body{
     color:#000000 !important;
     text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2); 
   }
+  .button30-1{
+    transition: color 0.1s, text-shadow 0.1s;
+    font-size: 16px !important;
+    font-family: ixi-type, sans-serif !important;
+    font-weight: bold !important;
+    color:#000000 !important;
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2); 
+  }
   .button31{
     transition: color 0.1s, text-shadow 0.1s;
     font-size: 15px !important;
