--- a/web/src/pages/HomePage/css/HomePage.css
+++ b/web/src/pages/HomePage/css/HomePage.css
@@ -600,6 +600,28 @@ body{
     text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2); 
    
   }
+
+  .button50{
+  
+    font-size: 16px !important;
+    font-family: ixi-type, sans-serif !important;
+    text-transform: none !important;
+    color: #4d4c4c !important;
+    font-weight: bold !important;
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2); 
+    text-align: left !important;
+
+  }
+  .button51{
+  
+    font-size: 13.5px !important;
+    font-family: ixi-type, sans-serif !important;
+    text-transform: none !important;
+    text-align: left !important;
+    color: #858585 !important;
+    font-weight: 500 !important;
+
+  }
   .tab2 .Mui-selected {
     color: #dc635b !important;
     
