--- a/web/src/pages/HomePage/css/HomePage.css
+++ b/web/src/pages/HomePage/css/HomePage.css
@@ -5,9 +5,16 @@ body{
     box-sizing: border-box;
   
 }
+.image-container {
+  overflow: hidden;
+  width: 100%;
+  height: auto;
+}
+
 .home_banner{
     width: 100%;
     height: 455px;
+    transition: transform 1s ease-in-out;
 }
 .background{
     width: 100%;
@@ -743,6 +750,26 @@ body{
     font-weight: 400 !important;
     margin-bottom: 15px !important;
     
+  }
+  .button60{
+    transition: color 0.1s, text-shadow 0.1s;
+    font-size: 25px !important;
+    font-family: ixi-type, sans-serif !important;
+    text-transform: uppercase !important;
+    color:#e00303 !important;
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.1) !important; 
+    margin-bottom: 10px !important;
+    font-weight: bold !important;
+  }
+  .button61{
+    transition: color 0.1s, text-shadow 0.1s;
+    font-size: 25px !important;
+    font-family: ixi-type, sans-serif !important;
+    text-transform: uppercase !important;
+    color:#089e00 !important;
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.1) !important; 
+    margin-bottom: 10px !important;
+    font-weight: bold !important;
   }
 
   .button54::before {
